<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ubicacion"
            android:icon="@drawable/location"
            android:title="@string/menu_ubicacion"/>
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/perfil"
            android:title="@string/menu_perfil"            />
        <item
            android:id="@+id/nav_inmuebles"
            android:icon="@drawable/inmuebles"
            android:title="@string/menu_inmuebles"/>
        <item
            android:id="@+id/nav_inquilinos"
            android:icon="@drawable/inquilino"
            android:title="@string/menu_inquilinos"/>
        <item
            android:id="@+id/nav_contratos"
            android:icon="@drawable/contrato"
            android:title="@string/menu_contratos"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/exit"
            android:title="@string/menu_logout"/>

    </group>
</menu>