<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_ubicacion">

    <fragment
        android:id="@+id/nav_ubicacion"
        android:name="com.softannate.appinmobiliaria.ui.ubicacion.UbicacionFragment"
        android:label="@string/menu_ubicacion"
        tools:layout="@layout/fragment_ubicacion" />

    <fragment
        android:id="@+id/nav_inmuebles"
        android:name="com.softannate.appinmobiliaria.ui.inmuebles.InmueblesFragment"
        android:label="@string/menu_inmuebles"
        tools:layout="@layout/fragment_inmuebles" />
    <fragment
        android:id="@+id/nav_inquilinos"
        android:name="com.softannate.appinmobiliaria.ui.inquilinos.InquilinosFragment"
        android:label="@string/menu_inquilinos"
        tools:layout="@layout/fragment_inquilinos" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.softannate.appinmobiliaria.ui.logout.LogoutFragment"
        android:label="Logout"
        tools:layout="@layout/fragment_logout" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.softannate.appinmobiliaria.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/detalleInmuebleFragment"
        android:name="com.softannate.appinmobiliaria.ui.inmuebles.DetalleInmuebleFragment"
        android:label="Detalle Inmueble"
        tools:layout="@layout/fragment_detalle_inmueble" >
        <action
            android:id="@+id/action_detalleInmuebleFragment_to_nav_inmuebles"
            app:destination="@id/nav_inmuebles" />

    </fragment>
    <fragment
        android:id="@+id/detalleInquilinoFragment"
        android:name="com.softannate.appinmobiliaria.ui.inquilinos.DetalleInquilinoFragment"
        android:label="Inquilino"
        tools:layout="@layout/fragment_detalle_inquilino">
        <action
            android:id="@+id/action_detalleInquilinoFragment_to_nav_inquilinos"
            app:destination="@id/nav_inquilinos" />
    </fragment>
    <fragment
        android:id="@+id/nav_contratos"
        android:name="com.softannate.appinmobiliaria.ui.contratos.ContratosFragment"
        android:label="@string/menu_contratos"
        tools:layout="@layout/fragment_contratos" />
    <fragment
        android:id="@+id/detalleContratoFragment"
        android:name="com.softannate.appinmobiliaria.ui.contratos.DetalleContratoFragment"
        android:label="Detalle Contrato"
        tools:layout="@layout/fragment_detalle_contrato">
        <action
            android:id="@+id/action_detalleContratoFragment_to_nav_contratos"
            app:destination="@id/nav_contratos" />
    </fragment>
    <fragment
        android:id="@+id/detallePagosFragment"
        android:name="com.softannate.appinmobiliaria.ui.contratos.DetallePagosFragment"
        android:label="Pagos"
        tools:layout="@layout/fragment_detalle_pagos">
        <action
            android:id="@+id/action_detallePagosFragment_to_detalleContratoFragment"
            app:destination="@id/detalleContratoFragment" />
    </fragment>
    <fragment
        android:id="@+id/nuevoInmuebleFragment"
        android:name="com.softannate.appinmobiliaria.ui.inmuebles.NuevoInmuebleFragment"
        android:label="Nuevo Inmueble"
        tools:layout="@layout/fragment_nuevo_inmueble" >
        <action
            android:id="@+id/action_nuevoInmuebleFragment_to_nav_inmuebles"
            app:destination="@id/nav_inmuebles" />
    </fragment>
    <fragment
        android:id="@+id/modificarContraseniaFragment"
        android:name="com.softannate.appinmobiliaria.ui.perfil.ModificarContraseniaFragment"
        android:label="Modificar Password"
        tools:layout="@layout/fragment_modificar_contrasenia">
        <action
            android:id="@+id/action_modificarContraseniaFragment_to_nav_perfil"
            app:destination="@id/nav_perfil" />
    </fragment>

</navigation>